sandbox/output
Reorder.java:34: error: ')' expected
            result.add(Arrays.asList(2,2);
                                         ^
1 error
